crates/toml_edit/tests/snapshots/invalid/table/array-no-close-03.stderr
TOML parse error at line 1, column 4
  |
1 | [[a
  |    ^
invalid table header
expected `.`, `]]`
